<resources>
    <string name="app_name">Church App</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_generate">GenerateActivity</string>
    <string name="title_activity_Entry">EntryActivity</string>
    <string name="Opening">Opening</string>
    <string name="Bible_Reading">Bible Reading</string>
    <string name="ThanksGiving">Thanksgiving</string>
    <string name="Offertory">Offertory</string>
    <string name="Confession">Confession</string>
    <string name="HC1">HC1</string>
    <string name="HC2">HC2</string>
    <string name="HC3">HC3</string>
    <string name="Doxology">Doxology</string>
    <string name="Sankey">Sankey</string>
    <string name="Kristheeya">K.K.</string>
    <string name="Maramon">Maramon</string>
    <string-array name="TypeOfSong">
        <item>Kristheeya-Keerthanam</item>
        <item>Sankey</item>
        <item>English-Blue-Book</item>
        <item>Maramon-2015</item>
        <item>Maramon-2016</item>
        <item>Maramon-2017</item>
        <item>Maramon-2018</item>
        <item>Maramon-2019</item>
    </string-array>

</resources>
