<?xml version="1.2.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Entry"
    android:orientation="vertical"
    tools:context="com.gtaandteam.android.churchapp.EntryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Opening" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:popupBackground="@android:color/white" />

        <EditText
            android:id="@+id/EntryOpening"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Bible_Reading" />

        <EditText
            android:id="@+id/EntryBible"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ThanksGiving" />

        <EditText
            android:id="@+id/EntryThanksGiving"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"

            android:textColor="@color/Entry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Offertory" />

        <EditText
            android:id="@+id/EntryOffertory"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Confession" />

        <EditText
            android:id="@+id/EntryConfession"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/HC1" />

        <EditText
            android:id="@+id/EntryHC1"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/HC2" />

        <EditText
            android:id="@+id/EntryHC2"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/HC3" />

        <EditText
            android:id="@+id/EntryHC3"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            style="@style/CategoryStyleActivity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Doxology" />

        <EditText
            android:id="@+id/EntryDoxology"
            style="@style/CategoryStyleActivityRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:hint="Tap to enter, hold to generate"
            android:textColor="@color/Entry" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/EntryAddEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/Misc"
            android:fontFamily="sans-serif-condensed"
            android:text="Add  entry"
            android:textSize="18dp"

            />

    </FrameLayout>

</LinearLayout>
